--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>nesaaerwinsyah</title>
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <style type="text/css">
           body{
@@ -16,7 +17,7 @@
     </head>
     <body style="background-color: #171717; background-size: cover;">
         <center>
-           <img style="width: 100px; border-radius: 50%" src="img/logo.png">
+           <img style="width: 100px; border-radius: 50%" src="image/png">
            <p style="font-size: 15pt; text-decoration: none; color:#fff;"><b>nesaaerwinsyah</b></p>
            <div class="card col-lg-4 m-2" style="border-radius: 30px;">
                 <a href="https://youtube.com/@nesaaerwinsyah" target="_blank" style="text-decoration: none; color:black;">
