--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body style="background-color: #171717; background-size: cover;">
         <center>
-           <img style="width: 100px; border-radius: 50%" src="image/png">
+           <img style="width: 100px; border-radius: 50%" src="icon">
            <p style="font-size: 15pt; text-decoration: none; color:#fff;"><b>nesaaerwinsyah</b></p>
            <div class="card col-lg-4 m-2" style="border-radius: 30px;">
                 <a href="https://youtube.com/@nesaaerwinsyah" target="_blank" style="text-decoration: none; color:black;">
